# quoi

./: .gitignore  Makefile  README.md  pyproject.toml
quoi/: stats.py  time.py  viz.py
tests/: duration_to_interval_test.py  fill_based_on_test.py  fill_cartesian_expansion_test.py  get_value_test.py  trim_datetime_test.py
