[project]
name = "quoi"
version = "0.1.0"
description = "Toolkit for data analysis"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "numpy>=2.4.6",
    "plotly>=6.8.0",
    "polars>=1.41.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.8",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]